--- a/.github/workflows/release-frontend.yml
+++ b/.github/workflows/release-frontend.yml
@@ -1,4 +1,4 @@
-name: Build and Push Backend Image
+name: Build and Push Frontend Image
 on:
   push:
     branches:
@@ -19,8 +19,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: backend
+          context: app
           push: true
-          tags: wenzelflorian/shadow-backend:latest
+          tags: wenzelflorian/shadow-app:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
