--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "chart.js": "^4.4.3",
+    "chartjs-chart-geo": "^4.3.1",
     "gridstack": "^10.2.0",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
